# R-Type

./: .gitignore  CMakeLists.txt  Makefile  Protocol.md  README.md  README_NETWORK.md  TEST_SYNC.md  TODO  changes.patch  create_state.sh  r-type_client  r-type_server  subject.md  todonetwork.md  vcpkg.json
ECS/: CMakeLists.txt  FEATURES.md  README.md  build.sh  main.cpp  run_coverage.sh
ECS/include/ECS/: ALoader.hpp  ComponentFactory.hpp  Components.hpp  DLLoader.hpp  ILoader.hpp  LinuxLoader.hpp  MacOs.hpp  RType.hpp  RegisterAllComponents.hpp  Registry.hpp  SparseSet.hpp  WinLoader.hpp  WindowsLoader.hpp  Zipper.hpp
ECS/include/ECS/AssetManager/: AssetManager.hpp
ECS/include/ECS/AssetManager/Sound/: SoundManager.hpp
ECS/include/ECS/AssetManager/Texture/: TextureManager.hpp
ECS/include/ECS/Audio/: AudioManager.hpp  ISoundPlayer.hpp
ECS/include/ECS/Audio/Music/: MusicPlayer.hpp
ECS/include/ECS/Audio/SFX/: SFXPlayer.hpp
ECS/include/ECS/Components/: Animation.hpp  Collider.hpp  IComponent.hpp  InputBuffer.hpp  NetInput.hpp  Position.hpp  Sprite.hpp  UIComponent.hpp  Velocity.hpp
ECS/include/ECS/Messaging/: CommandDispatcher.hpp  EventBus.hpp  MessageQueue.hpp  MessagingManager.hpp
ECS/include/ECS/Messaging/Events/: Command.hpp  Event.hpp
ECS/include/ECS/Physics/: PhysicsManager.hpp
ECS/include/ECS/Physics/Collision/: CollisionDetector.hpp
ECS/include/ECS/Plugin/: Plugin.hpp  PluginManager.hpp  PluginMetadata.hpp
ECS/include/ECS/Renderer/: RenderManager.hpp
ECS/include/ECS/Systems/: Animation.hpp  Collision.hpp  ISystem.hpp  Position.hpp  Sprite.hpp  UISystem.hpp
ECS/include/ECS/UI/: AUIComponent.hpp  IUIComponent.hpp  README.md  UIBuilder.hpp  UIBuilder_DOCUMENTATION.md
ECS/include/ecs/: component_factory.hpp  components.hpp  demo_app.hpp  dlloader.hpp  entity.hpp  registry.hpp  rtype.hpp  sparse_set.hpp  systems.hpp  zipper.hpp
ECS/include/ecs/components/: collider.hpp  controllable.hpp  drawable.hpp  enemy.hpp  lifetime.hpp  position.hpp  remote_player.hpp  spawner.hpp  sprite.hpp  velocity.hpp
ECS/include/ecs/systems/: collision_system.hpp  control_system.hpp  draw_system.hpp  isystem.hpp  lifetime_system.hpp  position_system.hpp  spawn_system.hpp  sprite_system.hpp
ECS/src/: ALoader.cpp  LinuxLoader.cpp  MacOs.cpp  RegisterAllComponents.cpp  WinLoader.cpp  WindowsLoader.cpp  dlloader.cpp  library.cpp  registry.cpp  systems.cpp
ECS/src/AssetManager/: AssetManager.cpp
ECS/src/AssetManager/Sound/: SoundManager.cpp
ECS/src/AssetManager/Texture/: TextureManager.cpp
ECS/src/Audio/: AudioManager.cpp
ECS/src/Audio/Music/: MusicPlayer.cpp
ECS/src/Audio/SFX/: SFXPlayer.cpp
ECS/src/Messaging/: CommandDispatcher.cpp  EventBus.cpp  MessageQueue.cpp  MessagingManager.cpp
ECS/src/Physics/: PhysicsManager.cpp
ECS/src/Physics/Collision/: CollisionDetector.cpp
ECS/src/Physics/SpatialHash/: SpatialHash.cpp
ECS/src/Plugin/: Plugin.cpp  PluginManager.cpp
ECS/src/Renderer/: RenderManager.cpp
ECS/src/Renderer/Batch/: SpriteBatch.cpp
ECS/src/Renderer/Camera/: Camera.cpp
ECS/src/UI/Components/: Button.cpp  InputField.cpp  Panel.cpp  Text.cpp
ECS/src/components/: collider.cpp  controllable.cpp  drawable.cpp  enemy.cpp  library.cpp  lifetime.cpp  position.cpp  remote_player.cpp  spawner.cpp  sprite.cpp  velocity.cpp
ECS/src/systems/: UISystem.cpp  animation_system.cpp  collision_system.cpp  control_system.cpp  draw_system.cpp  lifetime_system.cpp  position_system.cpp  spawn_system.cpp  sprite_system.cpp
ECS/test/: README.md  asset_manager_test.cpp  audio_manager_test.cpp  camera_test.cpp  ecs_core_test.cpp  event_bus_test.cpp  messaging_manager_test.cpp  physics_manager_test.cpp  registry_test.cpp  render_manager_test.cpp  sound_manager_test.cpp  spatial_hash_test.cpp  sprite_batch_test.cpp  texture_manager_test.cpp  ui_components_test.cpp  ui_test.cpp
Game/: Makefile  (+10 more)
Games/Pang/: CMakeLists.txt  Constants.hpp  Makefile  README.md  main.cpp
Games/Pang/Core/: Core.cpp  Core.hpp
Games/Pang/Core/Scene/: IScene.hpp  MenuScene.hpp
Games/RType/: Application.cpp  Application.hpp  CMakeLists.txt  Constants.cpp  Constants.hpp  Networking.md  README.md  build.sh  main.cpp  main_client.cpp  main_server.cpp
Games/RType/.rtype/: GameConfig.cfg
Games/RType/Core/: AGameCore.cpp  AGameCore.hpp  EventManager.cpp  Events.hpp  GameCore.cpp  GameCore.hpp  IGameCore.hpp  PlatformMacros.hpp  RaylibWrapper.hpp  SceneManager.cpp  SceneManager.hpp
Games/RType/Core/Client/: Client.cpp  Client.hpp  Events.hpp  GameClient.cpp  GameClient.hpp
Games/RType/Core/Config/: Config.cpp  Config.hpp
Games/RType/Core/KeyBindingManager/: KeyBindingManager.cpp  KeyBindingManager.hpp
Games/RType/Core/Server/: GameServer.cpp  GameServer.hpp  UDPServer.cpp  UDPServer.hpp  server_main.cpp
Games/RType/Core/Services/: ServiceManager.cpp
Games/RType/Core/States/: AGameState.cpp  AGameState.hpp  GameState.hpp  GameStateManager.cpp  GameStateManager.hpp  IGameState.hpp  NetworkState.hpp
Games/RType/Core/StatesBis/: AGameState.cpp  AGameState.hpp  IGameState.hpp
Games/RType/Core/Window/: GameWindow.cpp  GameWindow.hpp
Games/RType/UI/: ColorPalette.hpp  ThemeManager.cpp  ThemeManager.hpp  UIComponent.hpp  UIManager.cpp  UIManager.hpp
Games/RType/UI/Components/: ChatWindow.hpp  GlitchButton.cpp  GlitchButton.hpp  UIButton.cpp  UIButton.hpp  UIInputField.cpp  UIInputField.hpp  UIPanel.cpp  UIPanel.hpp  UIText.cpp  UIText.hpp
Network/: CMakeLists.txt  Makefile  Protocol.md  README.md  README_NEW_ARCHITECTURE.md  REFACTOR_COMPLETE.md  SimpleProtocol.md  main.cpp  protocol.hpp  r-type_server  server.cpp  server.hpp
Network/include/: connection.hpp  enemy_manager.hpp  game_handlers.hpp  message_handler.hpp  network_manager.hpp  protocol.hpp  server_game_instance.hpp  session.hpp  udp_server.hpp  unknown_handler.hpp
Network/src/: connection.cpp  enemy_manager.cpp  game_handlers.cpp  message_handler.cpp  network_manager.cpp  protocol.cpp  server_game_instance.cpp  session.cpp  udp_server.cpp  unknown_handler.cpp
Network/test/: connection_test.cpp
(+300 files in other folders)
